--- a/MapMaven/Components/Maps/MapDetail.razor
+++ b/MapMaven/Components/Maps/MapDetail.razor
@@ -84,6 +84,10 @@
                                             </td>
                                         </tr>
                                         <tr>
+                                            <td><b>Time set</b></td>
+                                            <td>@playerScore.Score.TimeSet.LocalDateTime.ToString("G")</td>
+                                        </tr>
+                                        <tr>
                                             <td><b>Base score</b></td>
                                             <td>@playerScore.Score.BaseScore</td>
                                         </tr>
@@ -95,11 +99,37 @@
                                             <td><b>Accuracy</b></td>
                                             <td>@playerScore.AccuracyWithMods().ToString("#0.##")%</td>
                                         </tr>
+                                        <tr>
+                                            <td><b>Rank</b></td>
+                                            <td>@playerScore.Score.Rank</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Bad cuts</b></td>
+                                            <td>@playerScore.Score.BadCuts</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Missed notes</b></td>
+                                            <td>@playerScore.Score.MissedNotes</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Max combo</b></td>
+                                            <td>
+                                                @playerScore.Score.MaxCombo
+                                                @if (playerScore.Score.FullCombo)
+                                                {
+                                                    <MudChip Color="Color.Primary" Size="Size.Small" Class="ml-2">FC <MudIcon Icon="@Icons.Material.Filled.Check" Size="Size.Small" Class="ml-1"></MudIcon></MudChip>
+                                                }
+                                            </td>
+                                        </tr>
                                         @if (Map.Ranked)
                                         {
                                             <tr>
                                                 <td><b>PP</b></td>
                                                 <td>@playerScore.Score.Pp.ToString("#0.##")</td>
+                                            </tr>
+                                            <tr>
+                                                <td><b>Weighted PP</b></td>
+                                                <td>@((playerScore.Score.Pp * playerScore.Score.Weight).ToString("#0.##"))</td>
                                             </tr>
                                         }
                                     }
