Maps can be deleted from deleted playlist + styling

--- a/MapMaven/Components/Maps/MapBrowserRow.razor
+++ b/MapMaven/Components/Maps/MapBrowserRow.razor
@@ -135,7 +135,7 @@
                 <MudMenu Icon="@Icons.Material.Filled.MoreVert">
                     <MudMenuItem OnClick="() => DeleteMap(context.Item)">
                         <div class="d-flex">
-                            <MudIcon Icon="@Icons.Material.Filled.Delete" Size="Size.Small" /> Delete map
+                            <MudIcon Icon="@Icons.Material.Filled.Delete" Size="Size.Small" Class="mr-1" /> Delete map
                         </div>
                     </MudMenuItem>
                 </MudMenu>
