--- a/MapMaven/Components/Maps/MapBrowserRow.razor
+++ b/MapMaven/Components/Maps/MapBrowserRow.razor
@@ -3,7 +3,9 @@
 @using System.Text.Json
 @using MapMaven.Core.Utilities.Scoresaber
 
-<TemplateColumn T="Map" Sortable="false" Class="pa-0" CellStyle="width: 50px; position: relative;">
+
+<SelectColumn T="Map" />
+<TemplateColumn T="Map" Sortable="false" CellClass="pl-0" CellStyle="width: 50px; position: relative;">
     <CellTemplate>
         <div>
             <div class="d-flex">
