--- a/MapMaven/Components/Maps/SongPlaybackButton.razor
+++ b/MapMaven/Components/Maps/SongPlaybackButton.razor
@@ -10,6 +10,7 @@
         </div>
     }
     <MudIconButton Icon="@(CurrentlyPlaying ? Icons.Material.Filled.StopCircle : Icons.Material.Filled.PlayCircle)"
+                   Class="pt-0 pb-1"
                    OnClick="PlayPauseSongPreview">
     </MudIconButton>
 </div>
