--- a/MapMaven/Components/Maps/MapBrowserRow.razor
+++ b/MapMaven/Components/Maps/MapBrowserRow.razor
@@ -4,16 +4,30 @@
 @using MapMaven.Core.Utilities.Scoresaber
 
 
-<SelectColumn T="Map" />
+<TemplateColumn T="Map" Sortable="false" Resizable="false" ShowColumnOptions="false" HeaderStyle="width:0%; padding: 0;" CellStyle="padding: 0;"
+                Filterable="false" IsEditable="false">
+    <HeaderTemplate>
+        @if (Selectable)
+        {
+            <MudCheckBox T="bool" Checked="@context.IsAllSelected" CheckedChanged="@context.Actions.SetSelectAllAsync" Class="ma-3" />
+        }
+    </HeaderTemplate>
+    <CellTemplate>
+        @if (Selectable)
+        {
+            <MudCheckBox T="bool" Checked="@context.IsSelected" CheckedChanged="@context.Actions.SetSelectedItemAsync" Class="ma-3" />
+        }
+    </CellTemplate>
+</TemplateColumn>
 <TemplateColumn T="Map" Sortable="false" CellClass="pl-0" CellStyle="width: 50px; position: relative;">
     <CellTemplate>
         <div>
-            <div class="d-flex">
+            <div class="d-flex flex-column">
                 <MudTooltip Text="Play song preview" ShowOnFocus="false">
                     <SongPlaybackButton Map="context.Item"></SongPlaybackButton>
                 </MudTooltip>
                 <MudTooltip Text="Open map details" ShowOnFocus="false">
-                    <MudIconButton Icon="@Icons.Material.Filled.Info" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenDetails(context.Item)" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Info" Class="pb-0 pt-1" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenDetails(context.Item)" />
                 </MudTooltip>
             </div>
         </div>
