Bulk add maps to newly created playlist

--- a/MapMaven/Components/Playlists/PlaylistSelector.razor
+++ b/MapMaven/Components/Playlists/PlaylistSelector.razor
@@ -31,5 +31,6 @@
                 </MudListItem>
             }
         </MudList>
+        <MudButton OnClick="CreateNewPlaylist">New playlist</MudButton>
     </DialogContent>
 </MudDialog>
