Add playlist styling

--- a/MapMaven/Components/Playlists/PlaylistSelector.razor
+++ b/MapMaven/Components/Playlists/PlaylistSelector.razor
@@ -31,6 +31,12 @@
                 </MudListItem>
             }
         </MudList>
-        <MudButton OnClick="CreateNewPlaylist">New playlist</MudButton>
+        <MudButton
+            OnClick="CreateNewPlaylist"
+            Variant="Variant.Outlined"
+            Class="ma-5"
+            StartIcon="@Icons.Material.Filled.Add">
+            New playlist
+        </MudButton>
     </DialogContent>
 </MudDialog>
